Bug 1917034 - Remove some related always-on prefs. r=firefox-style-system-reviewers,zrhoffman

Differential Revision: https://phabricator.services.mozilla.com/D221769