layout/base/nsPresContext.cpp
@@ -572,9 +572,6 @@ void nsPresContext::PreferenceChanged(const char* aPrefName) {
   auto restyleHint = RestyleHint{0};
   // Changing any of these potentially changes the value of @media
   // (prefers-contrast).
-  // The layout.css.prefers-contrast.enabled pref itself is not handled here,
-  // because that pref doesn't just affect the "live" value of the media query;
-  // it affects whether it is parsed at all.
   if (prefName.EqualsLiteral("browser.display.document_color_use") ||
       prefName.EqualsLiteral("browser.display.foreground_color") ||
       prefName.EqualsLiteral("browser.display.background_color")) {
